--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,11 +3,7 @@
 <head>
 	<title>laporhoax.org</title>
 	<link rel="stylesheet" type="text/css" href="{{url_for("static", filename="bootstrap.css")}}">
-	<script type="text/javascript" src="{{url_for("static", filename="bootstrap.min.js")}}"></script>
-<style type="text/css">
-
-
-</style>
+	<script type="text/javascript" src="{{url_for("static", filename="")}}"></script>
 </head>
 	<nav class="nav navbar-default">
 		<div class="navbar-header">
