--- a/templates/hoax_page.html
+++ b/templates/hoax_page.html
@@ -1,81 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>laporhoax.org</title>
-	<link rel="stylesheet" type="text/css" href="{{url_for("static", filename="bootstrap.css")}}">
-	<script type="text/javascript" src="{{url_for("static", filename="bootstrap.min.js")}}"></script>
-<style type="text/css">
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 80px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 80px;
-  background-color: #0000;
-}
-
-.wrapper {
-    border:1px solid #000;
-    display:inline-block;
-    position:relative;
-}
-
-input,
-button {
-    background-color:transparent;
-    border:0;
-}
-
-button {
-    position:absolute;
-    right:0;
-    top:0;
-}
-
-input {
-    padding-right:30px; /* button padding */
-}
-
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-
-</style>
-</head>
-<body>
-	
-	<nav class="nav navbar-default">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapse" data-toggle="collapse" data-target="navbar" aria-expanded="false" aria-control="navbar" >
-				<span class="sr-only">Toggle Navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		</div>
-		<div id="navbar" class="nav navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li><a href="/">find hoax</a></li>
-				<li><a href="/hoax">latest hoax</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/create">submit</a></li>
-				<li><a href="/masuk">masuk</a></li>
-				<li><a href="/tentang">tentang</a></li>
-			</ul>
-		</div>
-	</nav>
+{%extends "layout.html"%}
+{%block body%}
 
 <div class="container">
 {%for hoax in data%}
@@ -101,17 +25,7 @@ input {
 		<button type="submit" class="btn wrapper" formmethod="post" formaction="/downvote/{{hoax.id}}">downvote</button>
 		</div>
 	</form>
-	<hr>
 </div>
 {%endfor%}
-
 </div>
-	
-
-
-</hr>
-</hr<>
-</div>
-</div>
-</body>
-</html>
+{%endblock%}
