--- a/templates/note.html
+++ b/templates/note.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hoax.id</title>
+	<title>Lapor Hoax</title>
 	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename="bootstrap.css")}}">
 
 
