--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>laporhoax.org</title>
+	<title>Lapor Hoax</title>
 	<link rel="stylesheet" type="text/css" href="{{url_for("static", filename="bootstrap.css")}}">
 	<script type="text/javascript" src="{{url_for("static", filename="")}}"></script>
 </head>
