new file:   .gitignore 	modified:   README.md 	new file:   apps.pyc 	new file:   lib/parse.py 	new file:   static/costum.css 	modified:   templates/submit.html

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -241,13 +241,13 @@
 		</div>
 		<div id="navbar" class="nav navbar-collapse bold">
 			<ul class="nav navbar-nav">
-				<li><a href="#">latest hoax</a></li>
-				<li><a href="#">top hoax</a></li>
+				<li><a href="/hoax">latest hoax</a></li>
+				<li><a href="/hoax/top">top hoax</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right bold">
-				<li><a class="#" href="#">submit</a></li>
-				<li><a href="#">masuk</a></li>
-				<li><a href="#">tentang</a></li>
+				<li><a class="/create" href="#">submit</a></li>
+				<li><a href="/login">masuk</a></li>
+				<li><a href="/about">tentang</a></li>
 			</ul>
 		</div>
 	</nav>
