--- a/templates/hoax_page.html
+++ b/templates/hoax_page.html
@@ -16,7 +16,7 @@
 		</div>
 		
 		<div class="col-md-4">
-			<h4>hoax score: <span class="label label-danger">{{hoax.hoax_score}}</span></h4>
+			<h4>Hoax Score: <span class="label label-danger">{{hoax.hoax_score}}</span></h4>
 		</div>
 	</div>
 	<form class="form-inline">
