--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 <form action="/create" method="post">
-	<p><input type="text" name="url" placeholder="url/sumber berita"></input></p>
-	<p><input type="text" name="judul" placeholder="judul berita"></input></p>
-	<p><input type="submit">submit</input></p>
+	<p><input type="text" name="url" placeholder="URL/Sumber Berita"></input></p>
+	<p><input type="text" name="judul" placeholder="Judul Berita"></input></p>
+	<p><input type="submit">Submit</input></p>
 </form>
 </body>
 </html>
