--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,21 +16,21 @@
 		</div>
 		<div id="navbar" class="nav navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/">find hoax</a></li>
-				<li><a href="/hoax">latest hoax</a></li>
-				<li><a href="/hoax/top">top hoax</a></li>
+				<li><a href="/">Find Hoax</a></li>
+				<li><a href="/hoax">Latest Hoax</a></li>
+				<li><a href="/hoax/top">Top Hoax</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/create">submit</a></li>
-				<li><a href="/login">masuk</a></li>
-				<li><a href="#">tentang</a></li>
+				<li><a href="/create">Submit</a></li>
+				<li><a href="/login">Masuk</a></li>
+				<li><a href="#">Tentang</a></li>
 			</ul>
 
 			<div class="navbar-form">
 		<form style="padding-left: 5%" class="form-inline" action="/cari" method="post">
 			<div class="form-group">
 				<input  class="form-control" placeholder="" type="text" style="width:auto; height: 50px; width: 600px; ;" required="true" name="text"></input>
-				<button type="submit" class="btn wrapper" style="height: 50px;">cari</button>	
+				<button type="submit" class="btn wrapper" style="height: 50px;">Cari</button>	
 				</div>
 		</form>	
 		</div>
