--- a/templates/landing.html
+++ b/templates/landing.html
@@ -45,14 +45,14 @@ input {
 
 		<div id="navbar" class="nav navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/">find hoax</a></li>
-				<li><a href="/hoax">latest hoax</a></li>
+				<li><a href="/">Find Hoax</a></li>
+				<li><a href="/hoax">Latest Hoax</a></li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/create">submit</a></li>
-				<li><a href="/login">masuk</a></li>
-				<li><a href="/about">tentang</a></li>
+				<li><a href="/create">Submit</a></li>
+				<li><a href="/login">Masuk</a></li>
+				<li><a href="/about">Tentang</a></li>
 			</ul>
 
 
@@ -72,7 +72,7 @@ input {
 		<form class="form-inline" action="/cari" method="post">
 			<div class="form-group">
 				<input  class="form-control" placeholder="masukkan url berita" type="text" style="width:auto; height: 50px; width: 600px; ;" required="true" name="text"></input>
-				<button type="submit" class="btn wrapper" style="height: 50px;">cari</button>	
+				<button type="submit" class="btn wrapper" style="height: 50px;">Cari</button>	
 				</div>
 		</form>	
 	</div>
