--- a/templates/note.html
+++ b/templates/note.html
@@ -44,7 +44,7 @@ body {
 </style>
 </style>
 <body>
-<div class="container"><h3 class="text-center">masukkan kata kunci, alamat web, url yang mencurigakan</h3></div>
+<div class="container"><h3 class="text-center">Masukkan Kata Kunci, Alamat Web, URL yang Mencurigakan</h3></div>
 	<div class="container">
 		<form action="/cari" method="post">
 			<div class="form-group row">
@@ -57,17 +57,17 @@ body {
 <div class="container">
 {% for n in data %}
 <div class="container">
-<p>judul berita: {{n.title}}</p>
-<p>alamat web/sumber berita: {{n.url}}</p>
-<p>nama domain: {{n.domain}}</p>
-<p>hoax score: {{n.hoax_score}}</p>
+<p>Judul Berita: {{n.title}}</p>
+<p>Sumber Berita: {{n.url}}</p>
+<p>Nama Domain: {{n.domain}}</p>
+<p>Hoax Score: {{n.hoax_score}}</p>
 <form class="form-inline" action="/upvote/{{n.id}}" method="post">
 	<label for="up">up</label>
 	<input name="up" type="submit" class="btn btn-info"></input>
 </form>
 
 <form action="/downvote/{{n.id}}" method="post">
-	<label for="down">down</label>
+	<label for="down">Down</label>
 	<input type="submit" class="btn btn-danger" name="down"></input>
 </form>
 </div>
