--- a/templates/submit.html.html
+++ b/templates/submit.html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>laporhoax.org</title>
+	<title>Lapor Hoax</title>
 	<link rel="stylesheet" type="text/css" href="{{url_for("static", filename="bootstrap.css)"}}">
 	<link rel="stylesheet" type="text/css" href="{{url_for("static", filename="static.css")}}">
 	<script type="text/javascript" src="{{url_for("static",filename="bootstrap.min.js")}}"></script>
@@ -19,13 +19,14 @@
 		</div>
 		<div id="navbar" class="nav navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="#">latest hoax</a></li>
-				<li><a href="#">top hoax</a></li>
+				<li><a href="/">Find Hoax</a></li>
+				<li><a href="/hoax">Latest Hoax</a></li>
 			</ul>
+
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">submit</a></li>
-				<li><a href="#">masuk</a></li>
-				<li><a href="#">tentang</a></li>
+				<li><a href="/create">Submit</a></li>
+				<li><a href="/login">Masuk</a></li>
+				<li><a href="/about">Tentang</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -33,16 +34,16 @@
 	<div class="container" style="padding-top: 2%;">
 	
 		<div class="container">
-		<p>masukkan informasi mengenai sumber berita yang diduga HOAX</p>
+		<p>Masukkan informasi mengenai sumber berita yang diduga HOAX</p>
 	<div class="container-post">
 		<form  role="form" method="post", action="/create">
 			<div class="form-group">
-				<label for="url_alamat">url/sumber berita/alamat web</label>
+				<label for="url_alamat">URL/Sumber Berita/Alamat Web</label>
 				<input class="form-control" name="url" type="text" placeholder="url/alamat sumber berita"></input>
 			</div>
 
 			<div class="form-group">
-				<label for="url_alamat">judul artikel/berita/kiriman</label>
+				<label for="url_alamat">Judul Artikel/Berita/Kiriman</label>
 				<input class="form-control" name="judul" type="text" placeholder="url/alamat sumber berita"></input>
 			</div>
 
