--- a/templates/tentang.html
+++ b/templates/tentang.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>laporhoax.org</title>
+	<title>Lapor Hoax</title>
 	<link rel="stylesheet" type="text/css" href="{{url_for("static", filename="bootstrap.css")}}">
 	<link rel="stylesheet" type="text/css" href="{{url_for("static", filename="static.css")}}">
 	<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
