--- a/templates/tentang.html
+++ b/templates/tentang.html
@@ -45,15 +45,15 @@ input {
 
 		<div id="navbar" class="nav navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/">find hoax</a></li>
-				<li><a href="/hoax">latest hoax</a></li>
-				<li><a href="/hoax/top">top hoax</a></li>
+				<li><a href="/">Find hoax</a></li>
+				<li><a href="/hoax">Latest hoax</a></li>
+				<li><a href="/hoax/top">Top hoax</a></li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/create">submit</a></li>
-				<li><a href="/login">masuk</a></li>
-				<li><a href="/about">tentang</a></li>
+				<li><a href="/create">Submit</a></li>
+				<li><a href="/login">Masuk</a></li>
+				<li><a href="/about">Tentang</a></li>
 			</ul>
 
 
@@ -62,12 +62,12 @@ input {
 	<div class="container">
 		<div class="container-fluid">
 			<h3 class="bold">tentang</h3>
-			<h4><code>laporhoax.org</code> adalah bentuk kepedulian terhadap kondisi akhir-akhir ini dimana banyak media yang tidak bertanggung jawab terhadap konten berita yang mereka buat. sehingga hal ini menimbulkan ambiguity di kalangan masyarakat awam yang kurang melakukan <i>research</i> terhadap konten berita tersebut </h4>
+			<h4><strong>LaporHoax</strong> adalah bentuk kepedulian terhadap kondisi akhir-akhir ini dimana banyak media yang tidak bertanggung jawab terhadap konten berita yang mereka buat. sehingga hal ini menimbulkan ambiguity di kalangan masyarakat awam yang kurang melakukan <i>research</i> terhadap konten berita tersebut </h4>
 		</div>
 
 		<div class="container-fluid">
 			<h3>bagaimana</h3>
-			<h4><code>laporhoax.org</code> mengumpulkan URL <code>Uniform Resource Locator</code> dari konten berita yang diduga <i>HOAX</i> yang dimasukkan oleh pengguna, selanjutnya, setiap link akan diberi <i>score hoax</i>. </h4>
+			<h4><strong>LaporHoax</strong> mengumpulkan URL <code>Uniform Resource Locator</code> dari konten berita yang diduga <i>HOAX</i> yang dimasukkan oleh pengguna, selanjutnya, setiap link akan diberi <i>score hoax</i>. </h4>
 		</div>
 	
 		<div class="container-fluid">
@@ -82,9 +82,14 @@ input {
 		</div>
 
 		<div class="container-fluid">
-			<h3>pengembang</h3>
-			<h4><code>laporhoax.org</code> dikembangkan oleh <a href="http://twitter.com/vickydasta">Vicky Vernando Dasta</a></h4>
-			<h4>ingin membantu pengembangan? silahkan sapa pengembang</h4>
+			<h3>Para Pengembang LaporHoax:</h3>
+			<ul>
+				<li><a href="http://twitter.com/vickydasta">Vicky Vernando Dasta</a></li>
+				<li><a href="http://christo.js.org">Andre Christoga</a></li>
+			</ul>
+			<!-- <h3>Para Pengembang: </h3>
+			<h4><code>laporhoax.org</code> dikembangkan oleh </h4>
+			<h4>ingin membantu pengembangan? silahkan sapa pengembang</h4> -->
 		</div>
 	</div>
 
