--- a/templates/landing.html
+++ b/templates/landing.html
@@ -71,8 +71,7 @@ input {
 	<div class="container form-center">
 		<form class="form-inline" action="/cari" method="post">
 			<div class="form-group">
-				<input  class="form-control" placeholder="masukkan url berita" type="text" style="width:auto; height: 50px; width: 600px; ;" required="true" name="text"></input>
-				<button type="submit" class="btn wrapper" style="height: 50px;">Cari</button>	
+				<input  class="form-control" placeholder="masukkan url berita" type="text" style="width:auto; height: 50px; width: 600px; ;" required="true" name="text"></input><button type="submit" class="btn wrapper" style="height: 50px;">Cari</button>	
 				</div>
 		</form>	
 	</div>
