Fixed navigation links

--- a/templates/hoax_index.html
+++ b/templates/hoax_index.html
@@ -27,7 +27,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/create">Submit</a></li>
 				<li><a href="/masuk">Masuk</a></li>
-				<li><a href="/tentang">Tentangss</a></li>
+				<li><a href="/tentang">Tentang</a></li>
 			</ul>
 				<div class="navbar-form">
 					<form style="padding-left: 5%" class="form-inline" action="/cari" method="post">
