--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/create">Submit</a></li>
 				<li><a href="/login">Masuk</a></li>
-				<li><a href="#">Tentang</a></li>
+				<li><a href="/tentang">Tentang</a></li>
 			</ul>
 
 			<div class="navbar-form">
