--- a/templates/login.html
+++ b/templates/login.html
@@ -115,10 +115,10 @@
           <div class="panel-heading">
             <div class="row">
               <div class="col-xs-6">
-                <a href="#" class="active" id="login-form-link">Login</a>
+                <a class="active" id="login-form-link">Login</a>
               </div>
               <div class="col-xs-6">
-                <a href="#" id="register-form-link">Register</a>
+                <a id="register-form-link">Register</a>
               </div>
             </div>
             <hr>
